ch09/ex14/ingress02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test01(/|$)(.*) 
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-service-test01
            port:
              number: 80
      - path: /test02(/|$)(.*) 
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-service-test02
            port:
              number: 80
